# isolated-sign-language-recognition

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
conf/: eval_config.yml  train_config.template.yml
src/islr/: config.py  conv.py  datagen.py  distill.py  eval.py  logging.py  train.py  utils.py
src/islr/data_processing/: feature_extraction.py  load.py  preprocessing.py
src/islr/models/: callbacks.py  config.py  custom_transformer.py  embedding.py  lr_schedule.py  tf_lite.py  utils.py
src/islr/training/: benchmark.py  cross_validation.py  distiller.py  trainer.py  utils.py
