[tool.poetry]
name = "isolated-sign-language-recognition"
version = "0.1.0"
description = "Google - Isolated Sign Language Recognition (KAGGLE COMPETITION)"
authors = ["abhinand5 <abhinandalfio@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "isolated_sign_language_recognition"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "3.6.1"
numpy = "1.23.4"
pandas = "1.5.0"
pyyaml = "6.0"
scikit-learn = "1.2.2"
setuptools = "66.1.1"
tensorflow = "2.9.2"
tensorflow-addons = "0.19.0"
tqdm = "4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
